--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -22,5 +22,5 @@ jobs:
       - name: Push to target repo
         run: |
           cd source-repo
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/HKS-MS/themigratedone.git
+          git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/HKS-MS/themigratedone.git
           git push --mirror
