--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Clone source (public) repo
         run: |
-          git clone --mirror https://github.com/HKS-MS/azuremarketplace-workstream.git source-repo
+          git clone --branch main --single-branch https://github.com/HKS-MS/azuremarketplace-workstream.git source-repo
 
       - name: Configure Git
         run: |
@@ -23,4 +23,4 @@ jobs:
         run: |
           cd source-repo
           git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/HKS-MS/themigratedone.git
-          git push --mirror
+          git push origin main --force
